@@ -1,60 +1,80 @@
 # Role
-你是一位拥有 10 年经验的 Java 首席架构师，精通 Java 语言演进历史，擅长编写高质量、教学性质的代码演示项目。
+你是一位对 OpenJDK 源码了如指掌的 Java 技术专家，擅长编写百科全书式的技术演示项目。
 
 # Task
-请为一个名为 `java-lts-evolution` 的 Maven 多模块项目生成完整的代码结构和核心源码。
-该项目的目的是：**全面对比与演示 Java 8 到 Java 21 所有 LTS (长期支持) 版本的核心特性**。
+请生成一个名为 `java-lts-encyclopedia` (Java LTS 全书) 的 Maven 多模块项目结构及核心源码。
+**核心目标**：打造一个**全量覆盖** Java 8 到 Java 21 各个 LTS 版本所有新特性的参考手册级项目。不仅包含语法糖，还要包含 API 增强、底层工具、并发改进等所有细节。
 
 # Project Structure (项目结构)
-项目应包含一个父工程和 4 个子模块，每个子模块对应一个 LTS 版本：
-1. `java-lts-evolution` (Root Parent POM)
-2. `jdk8-foundation` (展示 Java 8 基石特性)
-3. `jdk11-modernization` (展示 Java 11 模块化与 API 增强)
-4. `jdk17-syntax-sugar` (展示 Java 17 语法糖与现代化特性)
-5. `jdk21-concurrency` (展示 Java 21 虚拟线程与高并发新特性)
+项目包含父工程和 4 个子模块。
+**关键要求**：每个模块内部必须采用**包名分类**（如 `syntax`, `api`, `io`, `lang`, `util`）来组织代码，因为特性非常多。
 
-# Requirements (具体要求)
+1. `java-lts-evolution` (Root)
+2. `jdk8-baseline` (基准版本)
+3. `jdk11-lts-comprehensive` (涵盖 JDK 9, 10, 11 所有特性)
+4. `jdk17-lts-comprehensive` (涵盖 JDK 12-17 所有特性)
+5. `jdk21-lts-comprehensive` (涵盖 JDK 18-21 所有特性)
+
+# Detailed Requirements (详细要求)
 
 ## 1. Maven 配置
-- 请提供父工程的 `pom.xml`，统一管理依赖（如 JUnit 5, Lombok, Slf4j）。
-- **关键点**：每个子模块的 `maven-compiler-plugin` 必须配置为对应的 Java 版本（source/target 分别为 1.8, 11, 17, 21）。
-- JDK 21 模块如果使用了 Preview 特性，请在配置中开启 `--enable-preview`。
+- 父工程管理所有依赖（JUnit 5, JMH 用于基准测试, Lombok）。
+- 子模块 `maven-compiler-plugin` 严格对应版本 (1.8, 11, 17, 21)。
+- **JDK 21 模块必须开启 `--enable-preview` 和 `--add-modules jdk.incubator.vector` (如果涉及向量API)。**
 
-## 2. 模块内容与代码演示
-请为每个模块生成至少 3-4 个核心特性的演示类 (`Demo.java`)。代码要求：
-- **可运行**：包含 `main` 方法或 JUnit 测试用例。
-- **对比视角**：在注释中或代码里展示 "Before (旧写法)" vs "After (新特性)"。
-- **详细注释**：解释该特性解决了什么痛点。
+## 2. 模块内容与特性覆盖列表 (必须全量)
 
-### 模块详情：
-*   **`jdk8-foundation`**:
-    - Lambda 表达式与函数式接口 (Function, Consumer 等)。
-    - Stream API 复杂操作 (Grouping, Partitioning)。
-    - Optional 的正确用法 (避免 `isPresent()`)。
-    - CompletableFuture 异步编排。
+请为每个模块生成详细的代码演示，代码注释中**必须标注对应的 JEP 编号** (例如 `// JEP 395: Records`)。
 
-*   **`jdk11-modernization`**:
-    - `var` 局部变量类型推断的各种场景。
-    - 新 `HttpClient` (同步 vs 异步) 演示。
-    - String 新增 API (`lines`, `strip`, `isBlank`)。
-    - 集合工厂方法 (`List.of`) 与流增强 (`takeWhile`).
+### 🟢 Module: `jdk8-baseline`
+- **Lambda & Functional**: 演示所有内置函数式接口，方法引用，构造器引用。
+- **Stream API**: 覆盖 `collect`, `reduce`, `flatMap`, 并行流陷阱。
+- **Optional**: 级联调用演示。
+- **Date-Time (JSR 310)**: `Instant` vs `LocalDateTime`, `Duration` vs `Period`, 时区处理。
+- **Concurrency**: `CompletableFuture` 详解, `StampedLock`, `LongAdder`。
+- **JVM**: 展示 Metaspace 替代 PermGen 的验证代码 (模拟 OOM)。
 
-*   **`jdk17-syntax-sugar`**:
-    - **Records**: 定义 DTO，对比传统 Class。
-    - **Text Blocks**: 展示 JSON/SQL 拼接对比。
-    - **Switch Expressions**: 箭头语法与返回值。
-    - **Sealed Classes**: 定义一个密封接口及其实现类。
-    - **Pattern Matching for instanceof**: 避免强制类型转换。
+### 🟡 Module: `jdk11-lts-comprehensive` (含 JDK 9/10)
+- **Module System (JPMS)**: 提供 `module-info.java` 示例，演示 `exports`, `requires`, `opens`。
+- **Syntax**: `var` (局部变量推断), 接口私有方法, Try-with-resources 增强。
+- **Collection Factory**: `List.of`, `Map.of`, `Set.of` (不可变性演示).
+- **Stream Enhancements**: `takeWhile`, `dropWhile`, `iterate` 重载, `ofNullable`.
+- **HTTP Client**: 同步/异步请求, HTTP/2 推送, WebSocket 演示.
+- **Process API**: `ProcessHandle` 获取 PID, 销毁进程树.
+- **StackWalker**: 演示高效获取栈帧信息.
+- **String/Files**: `lines()`, `strip()`, `readString()`, `writeString()`.
 
-*   **`jdk21-concurrency`**:
-    - **Virtual Threads**: 创建 10万个虚拟线程 vs 平台线程的性能/资源对比演示。
-    - **Sequenced Collections**: 演示 `getFirst`, `addLast` 等统一 API。
-    - **Switch Pattern Matching**: 在 Switch 中处理不同类型对象与 `null`。
-    - **Record Patterns**: 解构 Record 对象。
+### 🟠 Module: `jdk17-lts-comprehensive` (含 JDK 12-16)
+- **Records**: 构造器定制, 紧凑构造器, Record 实现接口.
+- **Text Blocks**: 缩进控制, 转义字符, SQL/JSON 演示.
+- **Switch Expressions**: 箭头语法, `yield`, 穷举性检查.
+- **Pattern Matching**: `instanceof` 模式匹配.
+- **Sealed Classes**: `sealed`, `non-sealed`, `final` 继承体系演示.
+- **NPE Enhancements**: 演示 Helpful NullPointerExceptions 的报错信息.
+- **Stream**: `toList()` vs `collect(toList())`.
+- **Unix Domain Socket**: `UnixDomainSocketAddress` 演示 (Mock).
+- **Math/Random**: `HexFormat`, 新的伪随机数生成器接口 `RandomGenerator`.
+
+### 🔴 Module: `jdk21-lts-comprehensive` (含 JDK 18-20)
+- **Virtual Threads (Project Loom)**:
+    - 基础用法: `Thread.ofVirtual().start()`.
+    - 性能压测: 100万虚拟线程 vs 平台线程.
+    - 结合 `Executors.newVirtualThreadPerTaskExecutor()`.
+- **Sequenced Collections**: `SequencedMap`, `SequencedSet`, `getFirst`, `addLast` 演示.
+- **Pattern Matching (Switch & Record)**:
+    - Switch 匹配 null.
+    - Switch 匹配类型 (`case Integer i`).
+    - Record 解构 (`case Point(int x, int y)`).
+    - Guarded Patterns (`when` 关键字).
+- **FFM API (Foreign Function & Memory)**: 演示使用 `Arena` 和 `Linker` 调用 C 语言 `strlen` 函数 (替代 JNI).
+- **Scoped Values (Preview)**: 演示替代 `ThreadLocal` 的用法.
+- **Structured Concurrency (Preview)**: `StructuredTaskScope` 演示任务分发与合并.
+- **Vector API (Incubator)**: 简单的 SIMD 计算演示.
+- **Simple Web Server**: 代码启动 `SimpleFileServer`.
 
 # Output Format
-请以 Markdown 代码块的形式输出：
+请直接输出：
 1. 父工程 `pom.xml`。
-2. 每个子模块的 `pom.xml` (关键部分)。
-3. 每个模块的核心 Java 文件代码。
-4. 简要的运行说明。
+2. **每个模块的包结构树状图** (Tree view)。
+3. 每个模块中 **最具代表性的 3 个复杂特性** 的完整 Java 代码 (包含 JEP 注释)。
+4. 其他特性的简要代码片段或说明。
